# second-brain-agent

./: .gitignore  LICENSE  README.md  agents.py  main.py  pyproject.toml  tools.py
.agents/: AGENTS.md  agent_spec.md  tool_specs.md  upgrade_spec.md
mcp/sse/: agent_sse.py  mcp_client_sse.py  mcp_server_sse.py
test/: test_google.py  test_notion.py  test_tools.py
