[project]
name = "second-brain-agent"
version = "0.1.0"
description = "An agent that runs every morning and summarizes your day before it starts — pulling from your calendar, emails, and a to-do list, then giving you a crisp briefing with priorities and suggested focus time blocks."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "ipykernel>=7.3.0",
    "langchain-ollama>=1.1.0",
    "notion-client>=3.1.0",
    "ollama>=0.6.2",
]
